# shogun

./: CMakeLists.txt
src/shogun/: CMakeLists.txt
src/shogun/base/: class_list.cpp.py.in
